# padic-core

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
backup/: backup_Cargo.toml
benches/: mod5_bench.rs
padic-crypto/: Cargo.toml
padic-crypto/benches/: sign_bench.rs
padic-crypto/benches/util/: bench_config.rs
padic-crypto/src/: agg_sig.rs  enc_core.rs  error.rs  fo.rs  kem_compact.rs  lib.rs  proof.rs  sampler.rs  sign_compact.rs
padic-crypto/src/backup/: backup_agg_sig.rs  backup_sign_compact(1).rs  backup_sign_compact.rs
padic-crypto/tests/: agg_roundtrip.rs  agg_sig_test.rs  compact_roundtrip.rs  enc_core_roundtrip.rs  encap_compact.rs  fo_roundtrip.rs  keygen_compact.rs  proof_mock.rs  proof_scaffold.rs  serde_roundtrip.rs  sign_keygen.rs  sign_roundtrip.rs
padic-crypto/tests/backup/: backup_keygen_compact(1).rs  backup_keygen_compact(2).rs  backup_keygen_compact(3).rs
src/: lib.rs  main.rs  mod5.rs
tests/: mod5_props.rs
