[package]
name        = "padic-crypto"
version     = "0.0.1"
edition     = "2021"
license     = "MIT"
description = "Compact MSIS/LWE KEM & signature built on padic-core"

[dependencies]
padic-core = { path = ".." }
rand       = "0.9"
blake3     = "1.5"
halo2_proofs = { version = "0.3" }
pasta_curves = "0.5"          # curva Pallas/Vesta para KZG

[dev-dependencies]
proptest  = "1.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "sign_bench"   # ← coincide con el nombre del archivo sin .rs
harness = false          # ← desactiva libtest, deja paso a Criterion




