[package]
name        = "padic-crypto"
version     = "0.0.1"
edition     = "2021"
license     = "MIT"
description = "Compact MSIS/LWE KEM & signature built on padic-core"

# ─── HALO 2 desarrollo – commit estable de 14 abr 2025 ───────────────────
# Usa la misma revisión para `halo2_proofs` y `halo2curves`

[dependencies]
padic-core = { path = ".." }
rand       = "0.9"
blake3     = "1.5"

# Halo 2 crates.io 0.3  – curvas Pasta, compromiso genérico
halo2_proofs  = "0.3"
halo2curves   = "0.5"

# opcional para paralelizar benches
rayon = { version = "1.10", optional = true }

[dev-dependencies]
proptest  = "1.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "sign_bench"   # ← coincide con el nombre del archivo sin .rs
harness = false          # ← desactiva libtest, deja paso a Criterion



